# corylus

./: .eslintrc.json  .prettierrc  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1667033683064.mjs  webpack.base.config.js  webpack.main.config.js  webpack.main.prod.config.js  webpack.renderer.config.js  webpack.renderer.dev.config.js  webpack.renderer.prod.config.js
assets/: icon.icns
src/: main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json  testing
src-tauri/.cargo/: config.toml
src-tauri/bindings/: WindowEvents.ts
src-tauri/src/: error.rs  log.rs  main.rs  settings.rs  window_events.rs
src-tauri/src/api/: branches.rs  config.rs  graph.rs  index.rs  mod.rs  rebase.rs  remote.rs  tags.rs
src-tauri/src/git/: branches.rs  config.rs  credentials.rs  diff.rs  files.rs  git_merge_file.rs  graph.rs  graph_generator.rs  history.rs  index.rs  merge.rs  mod.rs  rebase.rs  remote.rs  stash.rs  tags.rs  worktree.rs
src-tauri/src/git/model/: blameinfo.rs  config.rs  conflict.rs  git.rs  graph.rs  index.rs  mod.rs  remote.rs
src/components/: AboutPanel.tsx  Actions.tsx  Application.tsx  GlobalErrorBoundary.tsx  MainRepoView.tsx  Repository.tsx  StatusBar.tsx  StyleBase.tsx
src/main/: main.ts
src/model/: IGitConfig.ts  dirwatcher.ts  settings.ts  stateObjects.ts
src/renderer/: app.tsx
src/style/: app.css  dark-blue-theme.ts  dark-red-theme.ts  dark-theme.ts  light-blue-theme.ts  light-red-theme.ts  light-theme.ts  styled.d.ts  theme.ts
test/: conflict-parser.spec.ts  diff-parser.spec.ts
(+196 files in other folders)
