[package]
name = "corylus"
version = "0.2.0"
description = "A Git UI"
authors = ["Markus Brueckner"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
tauri = { version = "1.2.3", features = ["api-all"] }
git2 = { version = "0.17.1" }
lazy_static = { version = "1.4.0" }
directories = "5.0.0"
config = { version = "0.13.2", features = ["serde_json"] }
log = "0.4.17"
simple_logger = "4.0.0"
ts-rs = "6.2.1"
enum-display-derive = "0.1.1"
libgit2-sys = "0.15.2+1.6.4"
cty = "0.2.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
opt-level = 0
incremental = true
strip = false
lto = false
